2007-11-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Rewrote scan_clipboard using GLib::Timeout.

2007-11-17 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic.rb: Display useful warnings when optional dependencies are
    missing.
    * lib/fantasdic/ui.rb: Ditto.
    * lib/fantasdic/gettext.rb: Ditto.
    * lib/fantasdic/ui/browser.rb: Ditto.
    * lib/fantasdic/utils.rb: Added Symbol#to_proc.

2007-11-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb (on_print_setup): Was not passing the right
    variable as parent window.

2007-11-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/google_translate.rb: Fixed bug with right-to-left
    languages.

2007-11-03 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/result_text_view.rb: Improved the handling of links.
    There's no longer the need for one tag per link.
    * lib/fantasdic/ui/main_app.rb: The "link_clicked" signal doesn't provide a
    database as parameter anymore.

2007-11-01 Mathieu Blondel <mblondel@svn.gnome.org>

    * TODO: Updated. This is quite a large TODO list ;-).

2007-11-01 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Added String#utf8_reverse.
    * lib/fantasdic/ui/utils.rb: Added
    Gtk::TextIter#backward_case_insensitive_search and
    Gtk::TextIter#forward_case_insensitive_search.
    * lib/fantasdic/ui/result_text_view.rb: Use the above two methods.

2007-11-01 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/google_translate.rb: Rescue URI::InvalidURIError.

2007-10-31 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Fixed two typos.

2007-10-31 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Keep above option in the "View menu".
    Feature request by by Dmitry Rutsky (Debian bug #442340).
    * data/fantasdic/ui/menus.xml: Ditto.
